--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" media="screen" type="text/css" title="style" href="assets/css/style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Hind|Open+Sans&display=swap" rel="stylesheet"> 
     <title>AllezCine</title>
+    <script src="assets/js/prompter.js"></script>
 </head>
 
 <body>
